--- a/public/styleshome.css
+++ b/public/styleshome.css
@@ -41,11 +41,6 @@ h3 {
 
 }
 
-#paragraph1 {
-	text-align: center;
-	margin: 0px;
-}
-
 button {
 	background-color: #1A3837;
 	color: white;
@@ -59,11 +54,9 @@ button {
 
 
 
-#watercolor {
+.watercolor {
 	border-radius: 20px;
 	position: -5;
-
-
 }
 
 
@@ -88,7 +81,12 @@ ol {
 	text-align: center;
 	align-items: center;
 	border-radius: 20px;
+}
 
+.park_image {
+	height: 100px;
+	border-top-left-radius: 12px;
+	border-top-right-radius: 12px;
 }
 
 .crumb {
@@ -101,13 +99,16 @@ a {
 	color: #000201;
 }
 
+.addParkForm {
+	background: #1A3837;
+	flex-direction: column;
+	text-align: center;
+	align-items: center;
+}
 
 input {
 	display: block;
 	background-color: white;
 	width: 300px;
 	margin: 5px;
-	text-align: left;
-
-
 }
