--- a/public/styleshome.css
+++ b/public/styleshome.css
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Barlow:wght@200&family=Quicksand:wght@500&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Arvo:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Arvo:wght@400;700&family=Lato:wght@300;400&display=swap');
 
 
 ul {
@@ -13,7 +14,8 @@ ul {
 }
 
 body {
-	font-family: 'Barlow', sans-serif;
+	font-family: 'Lato', sans-serif;
+	font-weight: 300;
 	margin: 0px;
 }
 
@@ -38,7 +40,12 @@ h3 {
 	height: 75px;
 	float: left;
 	border-radius: 20px;
+	padding: 7px;
+	margin: 0px
+}
 
+.park_name {
+	font-weight: 400;
 }
 
 button {
@@ -49,16 +56,14 @@ button {
 	border: 0px;
 	margin: 0px auto;
 	display: block;
-	font-family: 'Barlow', sans-serif;
+	font-family: 'Lato', sans-serif;
+	font-weight: 300;
 }
 
+p {
+	margin: 5px;
 
-
-.watercolor {
-	border-radius: 20px;
-	position: -5;
 }
-
 
 ol {
 	padding-left: 0;
@@ -85,7 +90,7 @@ ol {
 }
 
 .park_image {
-	height: 100px;
+	height: 110px;
 	border-radius: 20px;
 }
 
@@ -99,16 +104,21 @@ a {
 	color: #000201;
 }
 
-#addParkForm {
+#addParkForm,
+#addParkNotesForm {
 	background: #1A3837;
 	color: aliceblue;
 	padding: 10px;
 	flex-direction: column;
-	text-align: left;
 	align-items: center;
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: center;
+	align-items: center;
+	width: 500px;
 }
 
-#addParkBtn {
+.formBtn {
 	background-color: #C3D7D7;
 	color: #1A3837;
 }
@@ -118,5 +128,8 @@ input {
 	background-color: white;
 	width: 300px;
 	margin: 5px;
-
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: center;
+	align-items: center;
 }
