--- a/public/styleshome.css
+++ b/public/styleshome.css
@@ -32,17 +32,30 @@ h1 {
 }
 
 h3 {
-	text-align: center;
 	font-family: 'Arvo', serif;
+	font-size: x-large;
+}
+
+#favoritesHeader {
+	text-align: center;
 	color: #1D4927;
 	background-color: #D4E3D0;
 	width: 75%;
-	padding: 10px;
-	font-size: x-large;
+	padding: 5px;
 	border: 3px solid #39632E;
 }
 
-h6 {
+#header3 {
+	text-align: center;
+	align-content: center;
+	color: #1D4927;
+	background-color: #D4E3D0;
+	width: 75%;
+	padding: 5px;
+	border: 3px solid #39632E;
+}
+
+h5 {
 	background-color: #1D4927;
 	color: white;
 	padding: 10px;
@@ -134,7 +147,36 @@ a {
 	border: 2px solid #39632E;
 }
 
-#addParkForm,
+#addParkForm {
+	background: #D4E3D0;
+	color: #1D4927;
+	padding: 10px;
+	flex-direction: row;
+	align-items: center;
+	display: flex;
+	flex-wrap: wrap;
+	width: 400px;
+	border: 3px solid #39632E;
+	text-align: center;
+	margin: 0px
+}
+
+#openingContent {
+	flex-direction: row;
+	align-items: center;
+	display: flex;
+	flex-wrap: wrap;
+	justify-content: center;
+	width: 85%;
+	margin: 30px 0px;
+}
+
+.break {
+	flex-basis: 100%;
+	height: 0px;
+	margin: 0px
+}
+
 #addParkNotesForm {
 	background: #D4E3D0;
 	color: #1D4927;
@@ -148,27 +190,21 @@ a {
 	border: 3px solid #39632E;
 }
 
-#openingContent {
+#sortParksForm2 {
+	background: #D4E3D0;
+	color: #1D4927;
 	flex-direction: row;
 	align-items: center;
 	display: flex;
-	flex-wrap: wrap;
 	justify-content: center;
-	width: 85%;
-	margin-bottom: 30px;
+	margin: 0px auto;
+	max-width: 800px;
 }
-
-
-
 
 input {
 	display: block;
 	background-color: white;
 	border-width: 0px;
-	width: 300px;
+	width: 250px;
 	margin: 5px;
-	display: flex;
-	flex-wrap: wrap;
-	justify-content: center;
-	align-items: center;
 }
